# solution

./: .clangd  .gitignore  .tmp.swp  132.cpp  2724_Violet_6_蒲公英.cpp  2763_JLOI_2011_飞行路线  2763_JLOI_2011_飞行路线.cpp  6282_数列分块入门_6.cpp  6284_数列分块入门_8  6284_数列分块入门_8.cpp  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  D_2_388535_Hard_Version  Daily.md  Fix-vscode-settings.md  GPATH  GRTAGS  GTAGS  Makefile  README.md  Todo.md  a  a.c  a.cpp  a.hs  a.out  cmake_install.cmake  codeSize.html  codeSize.md  compile_commands.json  duipai.cpp  g  generator  generator.cpp  generator.py  in  jiaohua.cpp  list.md  look.py  (+20 more)
.cph/: .1456.cpp_c82f6bc77f23026e8428877ce4439344.prob  .1733.cpp_4459e580d476921be01018a7e9b5b503.prob  .2724_Violet_6_蒲公英.cpp_9db269890a5d6efaad6b7afcf32f74f3.prob  .2763_JLOI_2011_飞行路线.cpp_e0c9bc4fa3f0c25450bd6a715389e1e2.prob  .6279_数列分块入门_3.cpp_228c1d6f8ad04a7c80f2c1ccdf1abf8b.prob  .6280_数列分块入门_4.cpp_4d70c24438ad8e234f74b89727b8d1ef.prob  .6281_数列分块入门_5.cpp_90f7c575b3b81821889999242e4db0ad.prob  .6282_数列分块入门_6.cpp_8173f7274d4a465279d51fa21e23d131.prob  .6283_数列分块入门_7.cpp_9048236ae52cf3ba7ecf031a64abb40f.prob  .6284_数列分块入门_8.cpp_4a3a2ee6d58bd9bf6f0d7281c0378487.prob  .6285_数列分块入门_9.cpp_039ae4398dbbc892c8a85dc03c58ea9c.prob  .A_Divide_and_Multiply.cpp_2c0c4197649feadca948baa462e5e290.prob  .A_Good_Pairs.cpp_b98d389e3ffd824b123fa9bc1101623b.prob  .A_Log_Chopping.cpp_e659fdae3e0807e3a8d65964a3729182.prob  .A_Long_Comparison.cpp_22e00c99673268cf5a1dcf6e25636cbb.prob  .A_Marin_and_Photoshoot.cpp_b88f0f9c4c70f079fac25405efaf1dde.prob  .A_Organizing_SWERC.cpp_f795a9b71cafc2445e8ce08fe3b2124f.prob  .D_K-good.cpp_56ac0142e1806dae05cc9df653b7dc3d.prob  (+36 more)
(+792 files in other folders)
